--- a/yonetimpaneli/.htaccess
+++ b/yonetimpaneli/.htaccess
@@ -9,6 +9,7 @@ RewriteBase /kurumsalsite/yonetimpaneli
 
 RewriteRule ^liste/(.*)$ index.php?sayfa=liste&tablo=$1 [NC]
 RewriteRule ^modul-ekle$ index.php?sayfa=modul-ekle [NC]
+RewriteRule ^modul-sil$ index.php?sayfa=modul-sil [NC]
 
 RewriteRule ^ekle/(.*)$ index.php?sayfa=ekle&tablo=$1 [NC]
 RewriteRule ^duzenle/(.*)/(.*)$ index.php?sayfa=duzenle&tablo=$1&ID=$2  [NC]
