--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,7 @@ RewriteBase /kurumsalsite/
 RewriteRule ^kurumsal/(.*)$ index.php?sayfa=kurumsal&selflink=$1 [NC]
 RewriteRule ^hizmetler$ index.php?sayfa=hizmetler [NC]
 RewriteRule ^projeler$ index.php?sayfa=projeler [NC]
+RewriteRule ^bagis$ index.php?sayfa=bagis [NC]
 RewriteRule ^blog$ index.php?sayfa=blog [NC]
 RewriteRule ^iletisim$ index.php?sayfa=iletisim [NC]
 RewriteRule ^hizmet-detay/(.*)$ index.php?sayfa=hizmet-detay&selflink=$1 [NC]
