--- a/yonetimpaneli/.htaccess
+++ b/yonetimpaneli/.htaccess
@@ -18,7 +18,7 @@ RewriteRule ^proje-sil/(.*)/(.*)$ index.php?sayfa=proje-sil&tablo=$1&ID=$2  [NC]
 RewriteRule ^userblog$ index.php?sayfa=userblog [NC]
 RewriteRule ^userblog-list/(.*)$ index.php?sayfa=userblog-list&tablo=$1 [NC]
 RewriteRule ^userblog-delete/(.*)/(.*)$ index.php?sayfa=userblog-delete&tablo=$1&ID=$2  [NC]
-RewriteRule ^duzenle/(.*)/(.*)$ index.php?sayfa=duzenle&tablo=$1&ID=$2  [NC]
+RewriteRule ^userblog-edit/(.*)/(.*)$ index.php?sayfa=userblog-edit&tablo=$1&ID=$2  [NC]
 
 RewriteRule ^ekle/(.*)$ index.php?sayfa=ekle&tablo=$1 [NC]
 RewriteRule ^duzenle/(.*)/(.*)$ index.php?sayfa=duzenle&tablo=$1&ID=$2  [NC]
