--- a/yonetimpaneli/.htaccess
+++ b/yonetimpaneli/.htaccess
@@ -10,10 +10,13 @@ RewriteBase /kurumsalsite/yonetimpaneli
 RewriteRule ^liste/(.*)$ index.php?sayfa=liste&tablo=$1 [NC]
 RewriteRule ^modul-ekle$ index.php?sayfa=modul-ekle [NC]
 RewriteRule ^modul-sil$ index.php?sayfa=modul-sil [NC]
-
-
 RewriteRule ^proje-ekle$ index.php?sayfa=proje-ekle [NC]
 RewriteRule ^proje-liste/(.*)$ index.php?sayfa=proje-liste&tablo=$1 [NC]
+
+RewriteRule ^ekip-uyeleri$ index.php?sayfa=ekip-uyeleri [NC]
+RewriteRule ^ekip-uyeleri-ekle$ index.php?sayfa=ekip-uyeleri-ekle [NC]
+RewriteRule ^ekip-duzenle/(.*)/(.*)$ index.php?sayfa=ekip-duzenle&tablo=$1&ID=$2  [NC]
+
 RewriteRule ^proje-sil/(.*)/(.*)$ index.php?sayfa=proje-sil&tablo=$1&ID=$2  [NC]
 RewriteRule ^userblog$ index.php?sayfa=userblog [NC]
 RewriteRule ^userblog-list/(.*)$ index.php?sayfa=userblog-list&tablo=$1 [NC]
