--- a/.htaccess
+++ b/.htaccess
@@ -16,6 +16,8 @@ RewriteRule ^iletisim$ index.php?sayfa=iletisim [NC]
 RewriteRule ^hizmet-detay/(.*)$ index.php?sayfa=hizmet-detay&selflink=$1 [NC]
 RewriteRule ^proje-detay/(.*)$ index.php?sayfa=proje-detay&selflink=$1 [NC]
 RewriteRule ^blog-detay/(.*)$ index.php?sayfa=blog-detay&selflink=$1 [NC]
+RewriteRule ^bagis-bilgilendirme-formu$ index.php?sayfa=bagis-bilgilendirme-formu [NC]
+
 
 
 
