--- a/yonetimpaneli/.htaccess
+++ b/yonetimpaneli/.htaccess
@@ -26,13 +26,19 @@ RewriteRule ^userblog-list/(.*)$ index.php?sayfa=userblog-list&tablo=$1 [NC]
 RewriteRule ^userblog-delete/(.*)/(.*)$ index.php?sayfa=userblog-delete&tablo=$1&ID=$2  [NC]
 RewriteRule ^userblog-edit/(.*)/(.*)$ index.php?sayfa=userblog-edit&tablo=$1&ID=$2  [NC]
 
+RewriteRule ^bagis-yap$ index.php?sayfa=bagis-yap [NC]
+
 RewriteRule ^ekle/(.*)$ index.php?sayfa=ekle&tablo=$1 [NC]
 RewriteRule ^duzenle/(.*)/(.*)$ index.php?sayfa=duzenle&tablo=$1&ID=$2  [NC]
 RewriteRule ^sil/(.*)/(.*)$ index.php?sayfa=sil&tablo=$1&ID=$2  [NC]
 RewriteRule ^seo-ayarlari$ index.php?sayfa=seo-ayarlari [NC]
 RewriteRule ^iletisim-ayarlari$ index.php?sayfa=iletisim-ayarlari [NC]
+
 RewriteRule ^kullanici-ayarlari$ index.php?sayfa=kullanici-ayarlari [NC]
 RewriteRule ^kullanici-ekle$ index.php?sayfa=kullanici-ekle [NC]
+RewriteRule ^kullanici-duzenle/(.*)/(.*)$ index.php?sayfa=kullanici-duzenle&tablo=$1&ID=$2  [NC]
+RewriteRule ^kullanici-liste$ index.php?sayfa=kullanici-liste [NC]
+
 RewriteRule ^giris-yap$ login.php [NC]
 RewriteRule ^cikis$ index.php?sayfa=cikis [NC]
 
