--- a/yonetimpaneli/.htaccess
+++ b/yonetimpaneli/.htaccess
@@ -38,7 +38,8 @@ RewriteRule ^iletisim-ayarlari$ index.php?sayfa=iletisim-ayarlari [NC]
 RewriteRule ^kullanici-ayarlari$ index.php?sayfa=kullanici-ayarlari [NC]
 RewriteRule ^kullanici-ekle$ index.php?sayfa=kullanici-ekle [NC]
 RewriteRule ^kullanici-duzenle/(.*)$ index.php?sayfa=kullanici-duzenle&ID=$1  [NC]
-RewriteRule ^kullanici-liste$ index.php?sayfa=kullanici-liste [NC]
+RewriteRule ^kullanici-liste/(.*)$ index.php?sayfa=kullanici-liste&tablo=$1 [NC]
+RewriteRule ^kullanici-sil/(.*)/(.*)$ index.php?sayfa=kullanici-sil&tablo=$1&ID=$2  [NC]
 
 RewriteRule ^iletisim.y/(.*)$ index.php?sayfa=iletisim.y&tablo=$1 [NC]
 RewriteRule ^iletisim.cevapla/(.*)/(.*)$ index.php?sayfa=iletisim.cevapla&tablo=$1&ID=$2  [NC]
