--- a/yonetimpaneli/.htaccess
+++ b/yonetimpaneli/.htaccess
@@ -28,6 +28,7 @@ RewriteRule ^userblog-delete/(.*)/(.*)$ index.php?sayfa=userblog-delete&tablo=$1
 RewriteRule ^userblog-edit/(.*)/(.*)$ index.php?sayfa=userblog-edit&tablo=$1&ID=$2  [NC]
 
 RewriteRule ^bagis-yap$ index.php?sayfa=bagis-yap [NC]
+RewriteRule ^ayarlar$ index.php?sayfa=ayarlar [NC]
 
 RewriteRule ^ekle/(.*)$ index.php?sayfa=ekle&tablo=$1 [NC]
 RewriteRule ^duzenle/(.*)/(.*)$ index.php?sayfa=duzenle&tablo=$1&ID=$2  [NC]
