--- a/yonetimpaneli/.htaccess
+++ b/yonetimpaneli/.htaccess
@@ -38,7 +38,7 @@ RewriteRule ^iletisim-ayarlari$ index.php?sayfa=iletisim-ayarlari [NC]
 
 RewriteRule ^kullanici-ayarlari$ index.php?sayfa=kullanici-ayarlari [NC]
 RewriteRule ^kullanici-ekle$ index.php?sayfa=kullanici-ekle [NC]
-RewriteRule ^kullanici-duzenle/(.*)$ index.php?sayfa=kullanici-duzenle&ID=$1  [NC]
+RewriteRule ^kullanici-duzenle/(.*)/(.*)$ index.php?sayfa=kullanici-duzenle&tablo=$1&ID=$2  [NC]
 RewriteRule ^kullanici-liste/(.*)$ index.php?sayfa=kullanici-liste&tablo=$1 [NC]
 RewriteRule ^kullanici-sil/(.*)/(.*)$ index.php?sayfa=kullanici-sil&tablo=$1&ID=$2  [NC]
 
