--- a/yonetimpaneli/.htaccess
+++ b/yonetimpaneli/.htaccess
@@ -18,7 +18,7 @@ RewriteRule ^proje-sil/(.*)/(.*)$ index.php?sayfa=proje-sil&tablo=$1&ID=$2  [NC]
 
 RewriteRule ^ekip-uyeleri$ index.php?sayfa=ekip-uyeleri [NC]
 RewriteRule ^ekip-uyeleri-ekle$ index.php?sayfa=ekip-uyeleri-ekle [NC]
-RewriteRule ^ekip-duzenle/(.*)/(.*)$ index.php?sayfa=ekip-duzenle&tablo=$1&ID=$2  [NC]
+RewriteRule ^ekip-duzenle/(.*)$ index.php?sayfa=ekip-duzenle&ID=$1 [NC]
 RewriteRule ^ekip-uyeleri-sil/(.*)/(.*)$ index.php?sayfa=ekip-uyeleri-sil&tablo=$1&ID=$2  [NC]
 
 RewriteRule ^proje-sil/(.*)/(.*)$ index.php?sayfa=proje-sil&tablo=$1&ID=$2  [NC]
